<resources>
    <string name="app_name">NumberInfo</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="position">position</string>
    <string name="usrId">usrId</string>
    <string name="internet_connection">check your connection</string>
    <string name="name">name</string>
    <string name="number">number</string>
    <string name="connectivity_exception">Connectivity Exception</string>
    <string name="login_failed">login failed</string>
    <string name="successfully_registered">registered successfully</string>
    <string name="authentication_failed">authentication failed</string>
    <string name="data">data</string>
    <string name="hintname_activity_add_contact">enter name</string>
    <string name="addcontact">addContact</string>
    <string name="phone_number_add_contact_activity">phone number</string>
    <string name="name_contact_detail_activity">name</string>
    <string name="call_contact_detail_activity">call</string>
    <string name="text_contact_detail">number</string>
    <string name="register_register_activity">register</string>
    <string name="add_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="login_main_activity">log in</string>
    <string name="register_button_main_activity">Register</string>
    <string name="reset_password">reset password</string>
    <string name="enter_your_email_id">enter your email id</string>
    <string name="enter_your_password">enter your password</string>
    <string name="name_contacts_activity">name</string>
    <string name="add_to_widget">Add to Widget</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="sign_out">Sign Out</string>
    <string name="number_added_to_contact">number added to contact</string>
    <string name="added_widget">added to Widget</string>
    <string name="no_numbers_to_display">No numbers to display</string>
    <string name="verification_link_has_been_sent">verification Link has been sent</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="email_or_password_isempty">email or password is empty</string>
    <string name="login_page">login page..!</string>
    <string name="register">Register..!!</string>
</resources>
