<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/add_to_widget"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:id="@+id/id_widget"/>
</menu>